setup/config/ingress-nginx/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    # Use the nginx ingress controller
    kubernetes.io/ingress.class: "nginx"
    # Redirect HTTP → HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager will use this ClusterIssuer to issue certificates
    cert-manager.io/cluster-issuer: "home-issuer"  
    # Because longhoorn-frontend runs on port 80
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - grafana.rafa.local
      secretName: grafana-tls            # cert-manager will create this Secret
  rules:
    - host: grafana.rafa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana    
                port:
                  number: 80
