setup/config/ingress-nginx/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/group: "Operations"
    gethomepage.dev/icon: "longhorn.png"
    gethomepage.dev/description: "Distributed storage"
    gethomepage.dev/pod-selector: ""
    # Use the nginx ingress controller
    kubernetes.io/ingress.class: "nginx"
    # Redirect HTTP → HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager will use this ClusterIssuer to issue certificates
    cert-manager.io/cluster-issuer: "home-issuer"  
    # Because longhoorn-frontend runs on port 80
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - longhorn.rafa.local
      secretName: longhorn-tls            # cert-manager will create this Secret
  rules:
    - host: longhorn.rafa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend      
                port:
                  number: 80
